Fixing spacing btwn header image and body text in mobile view

--- a/css/base.css
+++ b/css/base.css
@@ -772,7 +772,7 @@ body.outlook p {
   }
 
   table[class="body"] .wrapper.button-left {
-    padding-bottom: 0 !important;
+    padding-bottom: 10px !important;
   }
 
   table[class="body"] .button-right {
